[gd_scene load_steps=7 format=2]

[ext_resource path="res://cockpit/SScreen1.gd" type="Script" id=1]
[ext_resource path="res://cockpit/SonarSound.tscn" type="PackedScene" id=2]
[ext_resource path="res://screen_panel/screen_panel.tscn" type="PackedScene" id=3]
[ext_resource path="res://cockpit/black.png" type="Texture" id=4]

[sub_resource type="Shader" id=1]
resource_local_to_scene = true
code = "shader_type spatial;
render_mode blend_mix,depth_draw_opaque,cull_back,diffuse_burley,specular_schlick_ggx;
uniform vec4 albedo : hint_color;
uniform sampler2D texture_albedo : hint_albedo;
uniform float specular;
uniform float metallic;
uniform float roughness : hint_range(0,1);
uniform float point_size : hint_range(0,128);
uniform sampler2D texture_metallic : hint_white;
uniform vec4 metallic_texture_channel;
uniform sampler2D texture_roughness : hint_white;
uniform vec4 roughness_texture_channel;
uniform vec3 uv1_scale;
uniform vec3 uv1_offset;
uniform vec3 uv2_scale;
uniform vec3 uv2_offset;


void vertex() {
	UV=UV*uv1_scale.xy+uv1_offset.xy;
}




void fragment() {
	vec2 base_uv = UV;
	vec4 albedo_tex = texture(texture_albedo,base_uv);
	ALBEDO = albedo_tex.rgb;
	float metallic_tex = dot(texture(texture_metallic,base_uv),metallic_texture_channel);
	METALLIC = metallic_tex * metallic;
	float roughness_tex = dot(texture(texture_roughness,base_uv),roughness_texture_channel);
	ROUGHNESS = roughness_tex * roughness;
	SPECULAR = specular;
}

void light(){
	DIFFUSE_LIGHT = ALBEDO;
}
"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/albedo = Color( 0, 0, 0, 1 )
shader_param/specular = 0.0
shader_param/metallic = 0.0
shader_param/roughness = 1.0
shader_param/point_size = 1.0
shader_param/metallic_texture_channel = Plane( 1, 0, 0, 0 )
shader_param/roughness_texture_channel = Plane( 1, 0, 0, 0 )
shader_param/uv1_scale = Vector3( 1, 1, 1 )
shader_param/uv1_offset = Vector3( 0, 0, 0 )
shader_param/uv2_scale = Vector3( 1, 1, 1 )
shader_param/uv2_offset = Vector3( 0, 0, 0 )
shader_param/texture_albedo = ExtResource( 4 )

[node name="SScreen1" type="Spatial"]
script = ExtResource( 1 )

[node name="SonarSound" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.173648, 0.984808, 0, -0.984808, 0.173648, 0, 0, 0, 1, -0.65, -0.25, 0.15 )

[node name="Screen_1" parent="." instance=ExtResource( 3 )]

[node name="Button2" parent="Screen_1" index="1"]
color = Color( 0, 1, 0, 1 )
set_up = true

[node name="MeshInstance" parent="Screen_1" index="6"]
material_override = SubResource( 2 )
[connection signal="left_click" from="Screen_1/Button2" to="." method="_on_Button2_left_click"]

[editable path="Screen_1"]
